# nirvana

./: .gitignore  CMakeLists.txt
Nirvana/: Nirvana.sln
Nirvana/Motor/: Motor.cpp  Motor.vcxproj  Motor.vcxproj.filters
Nirvana/NirvanaEditor/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NirvanaEditor.csproj
Nirvana/NirvanaEditor/Comun/: VistaBase.cs
Nirvana/NirvanaEditor/Hub/: CrearProyecto.cs  Escena.cs  HubProyectos.xaml  HubProyectos.xaml.cs  Proyecto.cs  VistaAbrirProyecto.xaml  VistaAbrirProyecto.xaml.cs  VistaCrearProyecto.xaml  VistaCrearProyecto.xaml.cs
Nirvana/NirvanaEditor/Plantillas/Proyecto0/: plantilla.xml
Nirvana/NirvanaEditor/Plantillas/ProyectoAnime/: plantilla.xml
Nirvana/NirvanaEditor/Plantillas/ProyectoPixel/: plantilla.xml  proyecto.nirvana
Nirvana/NirvanaEditor/Plantillas/ProyectoTerceraPersona/: plantilla.xml
Nirvana/NirvanaEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Nirvana/NirvanaEditor/Utilidades/: Serializador.cs
src/: main.cpp
src/nucleo/: ventana.cpp  ventana.h
